Fixes for find_instructor form: Wrap lat/long and airport fields in a row; AutoComboboxSelectWidget for airport field; List skills horizontally

--- a/workshops/static/css/amy.css
+++ b/workshops/static/css/amy.css
@@ -21,6 +21,11 @@ form[role="form"] {
     margin-bottom: 50px;
 }
 
+/* Padding around horizontal list of skills in find_instructor form */
+.form-inline > * {
+   margin:10px 5px;
+}
+
 /* make space on the right of combobox element for a "dropdown button" */
 input.autocomboboxwidget {
     /*width: 90%;*/
